<resources>
    <string name="app_name">e-udhyog</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="new_seller">New Seller</string>
    <string name="already_selling">Already Selling</string>
    <string name="LOGIN">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="con">CONTINUE</string>
    <string name="otp">OTP</string>
    <string name="email_id">Email Id</string>
    <string name="phone_number">Phone Number</string>
    <string name="sign_up">SIGN UP</string>
    <string name="regi">REGISTER</string>
    <string name="name">Name</string>
    <string name="add">address</string>
    <string name="company_name">company name</string>
    <string name="store_name">Store Name</string>
    <string name="address">Address</string>
    <string name="details">Enter Below Details To Continue Registration</string>
    <string name="start_selling">Start Selling</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="finish">Finish</string>
    <string name="add_product">Add Product</string>
    <string name="add_product_image">Add Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="product_details">Product Details</string>
    <string name="add_other_details">Add Other Details</string>
    <string name="become_a_seller_on_e_udhyog">Become A Seller On E-Udhyog</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="verify_your_phone_number">Verify Your Phone Number</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Code</string>
    <string name="gstin_number">GSTIN Number</string>
    <string name="enter_your_otp_code_here">Enter Your Otp Code Here</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="please_enter_the_4_digit_code_sent_to_your_phone_number">Please Enter The 4 Digit Code Sent To Your Phone Number</string>
    <string name="your_new_password_must_be_different_from_previously_used_password">Your New Password Must Be Different From Previously Used Password</string>
    <string name="save">Save</string>
    <string name="new_password">New Password</string>
    <string name="my_orders">My Orders</string>
    <string name="help">Help</string>
    <string name="my_profile">My Profile</string>
    <string name="order">My Orders</string>
    <string name="seller_account">Seller Account</string>
    <string name="notification">Notification</string>
    <string name="terms_condition"><![CDATA[Terms & Condition]]></string>
    <string name="logout">Logout</string>
    <string name="deactivate_account">Deactivate Account</string>
    <string name="place_order">Place Order</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="total_bill">Total Bill :</string>
    <string name="payment_details">Payment Details</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="e_udhyog">E-UDHYOG</string>
    <string name="reports">Reports</string>
<string name="inventory">Inventory</string>
<string name="catalogue">Catalogue</string>
<string name="s_profile">My Profile</string>
    <string name="category">Category</string>
    <string name="accessories">Accessories</string>
    <string name="art_amp_craft"><![CDATA[Art&Craft]]></string>
    <string name="clothing">Clothing</string>
    <string name="homedecor">HomeDecor</string>
    <string name="grocery">Grocery</string>
    <string name="seller_store_name">seller store name</string>
    <string name="edit_profile_information">Edit Profile Information</string>


</resources>