<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword"
    android:background="#F6F5F3">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="253dp"
        android:layout_height="192dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/changepassword"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="360dp"
        android:layout_height="155dp"
        android:layout_marginTop="32dp"
        android:text="@string/your_new_password_must_be_different_from_previously_used_password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.027" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/buttoncurve"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:hint="@string/new_password"
        android:maxLength="8"
        android:textColorHint="#514F4F"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.672"
        tools:ignore="Autofill" />


    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:background="@drawable/buttoncurve"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:maxLength="8"
        android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
        android:inputType="textPassword"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="@color/black"
        android:textColorHint="#514F4F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="260dp"
        android:height="50dp"
        android:background="@drawable/buttoncurve"
        android:backgroundTint="#FDBF04"
        android:text="@string/save"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933" />
</androidx.constraintlayout.widget.ConstraintLayout>